--- a/src/App.css
+++ b/src/App.css
@@ -119,14 +119,17 @@ body {
 }
 
 .active-btn {
-  height: 33px;
-  padding-left: 10px;
-  padding-right: 10px;
+  height: 35px;
+  padding-left: 13px;
+  padding-right: 13px;
   border-radius: 20px;
   background-color: #f3aa4e;
+  border: 1px solid #f3aa4e;
   outline: none;
   cursor: pointer;
   color: #f1f5f9;
+  font-size: 18px;
+  font-weight: 600;
 }
 
 .each-tag {
